[package]
name = "misc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.178", features = ["derive"] }
aws-config = "0.55.0"
aws-sdk-s3 = "0.28.0"
aws-credential-types = { version = "0.55.0", features = ["hardcoded-credentials"] }
thiserror = "1.0.47"
base64 = "0.21.2"